--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: MixedTS
 Type: Package
 Title: Mixed Tempered Stable Distribution
-Version: 1.0.1
-Date: 2014-28-11
-Depends: methods, stats4, MASS
+Version: 1.0.3
+Date: 2015-07-16
+Depends: methods, stats, graphics, stats4, MASS
 Author: Lorenzo Mercuri, Edit Rroji
 Maintainer: Lorenzo Mercuri <lorenzo.mercuri@unimi.it>
-Description: This package provides detailed functions for univariate Mixed Tempered Stable distribution distribution with Gamma density. This distribution encompasses, Variance Gamma and Symmetric Geo-Stable as special cases. The package contains routine for mle estimation, for the computation of density, probability, quantile and random numbers
+Description: We provide detailed functions for univariate Mixed Tempered Stable distribution. 
 License: GPL (>= 2)
 Repository: CRAN
 Repository/R-Forge/Project: mixedts
-Repository/R-Forge/Revision: 11
-Repository/R-Forge/DateTimeStamp: 2014-08-03 17:55:34
-Date/Publication: 2014-08-04 08:15:17
-Packaged: 2014-08-03 18:15:19 UTC; rforge
+Repository/R-Forge/Revision: 14
+Repository/R-Forge/DateTimeStamp: 2015-07-17 12:10:20
+Date/Publication: 2015-07-17 15:22:47
 NeedsCompilation: no
+Packaged: 2015-07-17 12:25:10 UTC; rforge
